remove `target="_blank"` from title.

--- a/views/partials/common/header.ejs
+++ b/views/partials/common/header.ejs
@@ -13,8 +13,7 @@
 
                 <div class="flex items-baseline space-x-1.5">
                     <a href="/"
-                       class="text-2xl font-bold text-gray-300 hover:text-white transition duration-300"
-                       target="_blank">Ghosler</a>
+                       class="text-2xl font-bold text-gray-300 hover:text-white transition duration-300">Ghosler</a>
 
                     <% if (version) { %>
                         <a href="https://github.com/ItzNotABug/ghosler/releases"
