--- a/views/newsletter.ejs
+++ b/views/newsletter.ejs
@@ -996,7 +996,7 @@
                                     </tr>
 
                                     <!-- I saw `null` as a text for `post.featuredImageCaption`, weird. -->
-                                    <% if (post.featuredImageCaption && post.featuredImageCaption !== 'null') { %>
+                                    <% if (post.featuredImageCaption && post.featuredImageCaption.replace(/\s+/g, '') !== 'null') { %>
                                         <tr>
                                             <td align="center"
                                                 style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; vertical-align: top; width: 100%; padding-bottom: 30px; text-align: center; font-size: 13px; color: #738a94;"
