update, add: file uploading UI.

--- a/views/dashboard/settings.ejs
+++ b/views/dashboard/settings.ejs
@@ -145,6 +145,9 @@
             <!-- Customise -->
             <%- include('../partials/settings/customise.ejs') %>
 
+            <!-- Custom Template -->
+            <%- include('../partials/settings/template.ejs') %>
+
             <!-- Mails -->
             <%- include('../partials/settings/mail.ejs') %>
 
