--- a/views/partials/settings/customise.ejs
+++ b/views/partials/settings/customise.ejs
@@ -23,7 +23,7 @@
         <div class="form-group mb-4 flex items-center">
             <input type="checkbox" class="form-checkbox h-4 w-4 text-blue-600 rounded border-gray-600 mr-2"
                    id="newsletter.show_excerpt" name="newsletter.show_excerpt"
-            <% if (Boolean(configs.newsletter.show_excerpt) ?? false) { %> checked
+            <% if (Boolean(configs.newsletter.show_excerpt ?? false)) { %> checked
                     <% } %>
             >
             <label for="newsletter.show_excerpt" class="text-gray-300">Show Excerpts</label>
