--- a/views/newsletter.ejs
+++ b/views/newsletter.ejs
@@ -1329,7 +1329,7 @@
                                 <tr>
                                     <td align="center" class="footer"
                                         style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; vertical-align: top; color: #738a94; margin-top: 20px; text-align: center; font-size: 13px; padding: 10px 30px;line-height: 1.5em;"
-                                        valign="top"><%= site.title %> &#xA9; 2023 &#x2013; <a
+                                        valign="top"><%= site.title %> &#xA9; <%= new Date().getFullYear() %> &#x2013; <a
                                                 href="<%= newsletter.unsubscribeLink; %>"
                                                 style="overflow-wrap: anywhere; color: #738a94; text-decoration: underline;"
                                                 target="_blank">Unsubscribe </a>
