--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,6 +58,17 @@
                 Logs</a>
         </div>
 
+        <!-- Import/Export Card -->
+        <div class="flex flex-col justify-between bg-gray-800 shadow-lg rounded-lg p-6 hover:shadow-xl transition-shadow duration-300 ease-in-out h-full">
+            <div>
+                <h3 class="text-lg font-bold text-gray-300 mb-4">Import/Export</h3>
+                <p class="text-gray-400 mb-4">Easily manage your configurations & analytics.</p>
+            </div>
+
+            <a href="<%= ghoslerUrl %>/settings/configs"
+               class="inline-block bg-teal-600 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded transition duration-300">Open Dashboard</a>
+        </div>
+
         <!-- Issue Card -->
         <div class="flex flex-col justify-between bg-gray-800 shadow-lg rounded-lg p-6 hover:shadow-xl transition-shadow duration-300 ease-in-out h-full">
             <div>
