--- a/views/dashboard/import-export.ejs
+++ b/views/dashboard/import-export.ejs
@@ -51,8 +51,9 @@
             </a>
 
             <p class="text-gray-400 mx-1 mt-4 mb-4 text-s">
-                <span class="font-bold">Note</span>: Uploading an import file will override your analytics & configurations!
-                You'll also need to update your webhook on Ghost!
+                <span class="font-bold">Note</span>: Uploading an import file will override your analytics &
+                configurations! You'll also need to recreate your webhook on Ghost if the backup is being restored on a
+                new domain!
             </p>
 
             <p class="text-gray-400 mt-4 mx-1 text-s font-bold">THIS ACTION IS IRREVERSIBLE!</p>
